20/08/2016: rename lpwd => lp, spwd => sp, dpwd => dp