@@ -9,19 +9,20 @@ $ echo "source ~/pwdtools/pwdtools.sh" >> ~/.bashrc
 ```
 
 # How to use
-Set the path of the current directory of all starting shell:
+When a new shell is started it will automatically go to your "current working directory",
+     that you can define like that: (shorthand for set path)
 ```
 $ sp
 ```
 
-Go back to the starting path
+Go back to the starting path: (shorthand for load path)
 ```
 $ lp
 ```
 
 Create a shortcut:
 ```
-$ cd your_path_ugly_and_hard_to_remember
+$ cd your/path/ugly/and/hard/to/remember
 $ sp shortcut
 ```
 
@@ -32,7 +33,22 @@ $ lp shortcut
 
 For example you can create a shortcut to you favorite project sp favorite, wherever this project is you don't have to remember or go throught the pain of find/ cd //// it just lp favorite.
 
+Delete a shortcut
+```
+$ dp shortcut
+```
+
 I tried several ways of implementing this and symbolic links sound like the best way to go.
+
+If you are using i3 you can have a "current working directory" per workspace,
+```
+$ # define it (set path)
+$ spw
+$ # delete it
+$ dpw
+$ # load it
+$ lpw
+```
 
 Tips:
 you can: cp something ~/.pwd/favorite
@@ -42,7 +58,7 @@ use initials, your brain likes it, for example: mc => myconf, al => archlinux
 
 ### Todos
 
- - Look for bugs
+ -  ?
 
 License
 ----
